--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -2,12 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.zt</groupId>
-  <artifactId>cloud-eureka</artifactId>
+  <artifactId>cloud-gateway</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>cloud-eureka</name>
+  <name>cloud-gateway</name>
   <url>http://maven.apache.org</url>
-
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -17,16 +16,11 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-config</artifactId>
+      <artifactId>spring-cloud-starter-zuul</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-eureka</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-eureka-server</artifactId>
     </dependency>
 
   </dependencies>
@@ -42,5 +36,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
 </project>
