--- a/cloud-gateway/src/resources/application.properties
+++ b/cloud-gateway/src/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=cloud-gateway
-server.port=5555
+server.port=8001
 
 # routes to serviceId
-#zuul.routes.api-a.path=/api-a/**
-#zuul.routes.api-a.serviceId=service-A
+zuul.routes.api-a.path=/api-a/**
+zuul.routes.api-a.serviceId=cloud-provider
 
-#zuul.routes.api-b.path=/api-b/**
-#zuul.routes.api-b.serviceId=service-B
+zuul.routes.api-b.path=/api-b/**
+zuul.routes.api-b.serviceId=cloud-providerB
 
 # routes to url
-zuul.routes.api-a-url.path=/api-a-url/**
-zuul.routes.api-a-url.url=http://localhost:2222/
+#zuul.routes.api.path=/api/**
+#zuul.routes.api.stripPrefix=false
+#api.ribbon.listOfServers=127.0.0.1:8011,127.0.0.1:8012
 
-eureka.client.serviceUrl.defaultZone=http://localhost:1234/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
