删除application配置文件

--- a/cloud-mybatis/src/resources/application.yml
+++ b/cloud-mybatis/src/resources/application.yml
@@ -1,3 +1,19 @@
+# SPRING PROFILES
+spring:
+    # HTTP ENCODING
+    http:
+        encoding.charset: UTF-8
+        encoding.enable: true
+        encoding.force: true
+
+# Mybatis
 mybatis:
   mapper-locations: classpath*:mapper/*Mapper.xml
   type-aliases-package: com.zt.model
+  configLocation: classpath:mybatis-config.xml
+
+
+# LOGGING
+logging:
+    level:
+       com.ibatis: DEBUG
