--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.5.RELEASE</version>
+    <version>1.5.2.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <dependencies>
@@ -34,7 +34,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Camden.SR6</version>
+        <version>Dalston.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
