--- a/cloud-provider/cloud-web/src/resources/application.properties
+++ b/cloud-provider/cloud-web/src/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=cloud-provider
 server.port=8011
-eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/,http://localhost:8001/eureka/
 
 
