--- a/cloud-eureka/pom.xml
+++ b/cloud-eureka/pom.xml
@@ -7,16 +7,17 @@
   <version>1.0-SNAPSHOT</version>
   <name>cloud-eureka</name>
   <url>http://maven.apache.org</url>
-  <!--
-    <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <java.version>1.8</java.version>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-      <encoding>UTF-8</encoding>
-    </properties>
-  -->
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <encoding>UTF-8</encoding>
+    <docker.image.author>lujing</docker.image.author>
+  </properties>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -54,7 +55,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-
+      <!-- 资源文件打包拷贝 -->
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <version>2.6</version>
@@ -85,7 +86,7 @@
         <artifactId>docker-maven-plugin</artifactId>
         <version>0.4.13</version>
         <configuration>
-          <imageName>${project.artifactId}</imageName>
+          <imageName>${docker.image.author}/${project.artifactId}</imageName>
           <dockerDirectory>src/main/resources</dockerDirectory>
           <resources>
             <resource>
