--- a/cloud-providerB/cloud-web/src/resources/application.properties
+++ b/cloud-providerB/cloud-web/src/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=cloud-provider
 server.port=8012
-eureka.client.serviceUrl.defaultZone=http://139.224.227.35:8000/eureka/
-
-
+eureka.client.serviceUrl.defaultZone=http://139.224.227.35:8000/eureka/,http://139.224.227.35:8001/eureka/
