--- a/cloud-eureka/src/main/resources/application.yml
+++ b/cloud-eureka/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
 
 eureka:
   instance:
-    hostname: 139.224.227.35
+    hostname: localhost
   client:
-#    registerWithEureka: false
-#    fetchRegistry: false
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:80012/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8000/eureka/
